--- a/dance.css
+++ b/dance.css
@@ -1,98 +1,68 @@
-.dew-dance {
-  --dew-shift: color 303ms;
-  --dew-solar: #cd5;
-  --dew-lunar: #528;
-  --dew-slick: skyblue;
-  --dew-slime: indigo;
-  --dew-locus: currentColor;
-  --dew-hover: hue-rotate(-120deg);
-}
-
-.dew-hot {
-  --dew-solar: #010101;
-  --dew-lunar: deeppink;
-}
-
-.dew-warm {
-  --dew-solar: #202020;
-  --dew-lunar: orchid;
-}
-
-.dew-noise {
-  --dew-solar: #030303;
-  --dew-lunar: #999;
-}
-
-.dew-bae {
-  --dew-solar: #bae;
-  --dew-lunar: #415;
+@media (color) /* https://s9a.page/violet */ {
+  .viola * { background: transparent; color:inherit }
+  .viola.viola { color:var(--loyal); background:var(--petal) }
+  .viola.ouija { color:var(--petal); background:var(--loyal) }
+  .viola ::selection { color: #090909; background: #ec0 }
+  .viola { --petal: #bae; --loyal: indigo }
+  .violet { --petal: violet; --loyal: indigo }
+  .blueviolet { --petal: blueviolet; --loyal: floralwhite }
+  .darkviolet { --petal: darkviolet; --loyal: floralwhite }
+  .palevioletred { --petal: palevioletred; --loyal: navy }
+  .mediumvioletred { --petal: mediumvioletred; --loyal: floralwhite }
 }
 
 html {
   font-family: sans-serif;
-  font-size: max(3ch, 3vmax + 2vmin);
+  font-size: max(3ch, 5vmax + 3vmin);
   line-height: 1.618;
 }
 
 body {
-  box-sizing: border-box;
   margin: 0;
-  padding: 0;
-  position: relative;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
   overflow-wrap: anywhere;
 }
 
-dl {
-  font-size: 2rem;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  line-height: 1;
-}
-
-dt {
+h1 {
+  font-size: 1.618rem;
+  font-weight: 600;
   margin: 0;
-  flex-basis: 100%;
 }
 
-dd {
-  margin: 0;
-  flex-basis: 100%;
+p {
+  margin-top: 0;
+  margin-bottom: 20vh;
 }
 
-figure {
+p + p {
+  margin-top: 30vh;
+}
+
+article {
   box-sizing: border-box;
+  contain: style;
   display: flex;
   flex-direction: column;
   margin: auto;
-  padding: 1em;
+  padding: 1em 1ch;
 }
 
-header {
-  box-sizing: border-box;
-  padding-inline: 1em;
-}
-
-h1 {
-  display: inline;
-}
-
-sub {
-  font-size: 1ch;
-  vertical-align: text-bottom;
-}
-
-:link {
-  text-decoration: line-through dotted;
+:any-link {
+  text-decoration: dotted line-through;
 }
 
 :focus {
-  outline: thick dotted;
+  box-shadow: 0 0 0 1ch #ec0;
+  outline: thick outset;
+  text-decoration-line: underline;
 }
 
 .discoball {
   position: absolute;
   top: -100%;
+  min-height: 100vh;
 }
 
 .thump:target {
